# feature-point-cnn

./: .gitignore  LICENSE  README.md  requirements.txt  start_coco_preprocess.sh  start_magic_point_train.sh  start_magicpoint_coco_train.sh  start_super_point_train.sh  start_tensorboard.sh
cpp/: .gitignore  CMakeLists.txt
cpp/src/: camera.cc  camera.h  main.cc  model.cc  model.h  settings.h  superpoint.cc  superpoint.h  torchutis.cc  torchutis.h
python/: .gitignore  basetrainer.py  camera.py  coco_dataset.py  coco_preprocess.sh  gen_synthetic_dataset.py  homographies.py  inference.py  inference.sh  inferencewrapper.py  losses.py  magic_point_coco_train.sh  magic_point_train.sh  magicpointtrainer.py  main.py  netutils.py  nms.py  preprocess_coco.py  requirements.txt  saveutils.py  settings.py  start_tensorboard.sh  super_point_train.sh  superpoint.py  superpointtrainer.py  synthetic_dataset.py  synthetic_shapes.py  trainwrapper.py  weightsloader.py
python/src/: attention_blocks.py  basetrainer.py  camera.py  coco_dataset.py  dataset_transforms.py  dataset_utils.py  homographies.py  inference.py  inferencewrapper.py  losses.py  magicpointtrainer.py  netutils.py  preprocess_coco.py  resnet_blocks.py  saveutils.py  scheduler.py  settings.py  superpoint.py  superpointtrainer.py  synthetic_dataset.py  synthetic_shapes.py
python/tests/: coco-preprocess-test.py  homographic-adaptation.py  homographic-augmentation.py  homography-test.ini  homography-test.py  synthetic-test.py  test.ini
python/tests/manual/: coco-preprocess-test.py  homographic-augmentation.py  magicpoint.py  synthetic-test.py
